--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "firebase": "^11.7.3",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^16.1.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
